update *args **kwargs

--- a/learn_note/python_note/命令行参数.md
+++ b/learn_note/python_note/命令行参数.md
@@ -119,3 +119,28 @@ root:~/Tensorflowexample$ python argparse_example.py --echo 'hello' --square 4
 hello
 4
 ```
+
+# *args, **kwargs
+
+*args称之为Non-keyword Variable Arguments，无关键字参数；
+
+```python
+def test(a, b, *args):
+    c = args
+    print(a,'\n',b,'\n',c)
+
+test("this","is","a","test")
+```
+
+**kwargs称之为keyword Variable Arguments，有关键字参数；
+
+```python
+def test(a, b, **kwargs):
+    dict = kwargs
+    print(a,'\n',b)
+
+    print(dict['name'])
+    print(dict['age'])
+
+test("this","is", name = 'test', age = 1)
+```
