20210914 lab-reporter update

--- a/lab_reporter/20210914.md
+++ b/lab_reporter/20210914.md
@@ -1,3 +1,95 @@
+<!-- TOC -->
+
+- [暑期总结](#暑期总结)
+- [表格识别](#表格识别)
+  - [论文](#论文)
+    - [1. PP-Structure（有代码）](#1-pp-structure有代码)
+    - [2. EDD（无代码）](#2-edd无代码)
+    - [3. 平安银行某团队icdar2021 table recognition to html任务上的解决方案](#3-平安银行某团队icdar2021-table-recognition-to-html任务上的解决方案)
+  - [数据集](#数据集)
+    - [PubLayNet（已下载）](#publaynet已下载)
+    - [TableBank（未下载）](#tablebank未下载)
+
+<!-- /TOC -->
+
 # 暑期总结
 
-1. 
+# 表格识别
+
+## 论文
+
+### 1. PP-Structure（有代码）
+
+[代码github库](https://github.com/PaddlePaddle/PaddleOCR/tree/release/2.3/ppstructure)
+
+![pp-structure-pipeline](./pics/pp-structure-pipeline.png)
+
+1.  版面分析
+   
+    数据集`PubLayNet`，`TableBank`
+
+    基于[PaddleDetection](https://github.com/PaddlePaddle/PaddleDetection)训练，配置文件[参照](https://github.com/PaddlePaddle/PaddleOCR/blob/release/2.3/ppstructure/layout/train_layoutparser_model_ch.md)
+
+2.  表格识别
+
+    数据集`TableBank`
+
+    ![paddle-table-recogition-pipeline](./pics/paddle-table-recogition-pipeline.png)
+
+    - 图片由单行文字检测模型检测到单行文字的坐标，然后送入识别模型拿到识别结果。
+    - 图片由表格结构和cell坐标预测模型拿到表格的结构信息和单元格的坐标信息。
+    - 由单行文字的坐标、识别结果和单元格的坐标一起组合出单元格的识别结果。
+    - 单元格的识别结果和表格结构一起构造表格的html字符串。
+
+### 2. EDD（无代码）
+
+EDD模型结构
+
+![EDD_pipeline](./pics/EDD_architecture.png)
+
+使用PaperWithCode查找代码，有提供一个github库，但是好像不是这篇论文的代码，是另外一篇论文的代码，
+
+### 3. 平安银行某团队icdar2021 table recognition to html任务上的解决方案
+
+这个解决方案还没有仔细看，昨天总结EDD的时候发现的。
+
+[pdf链接](https://arxiv.org/pdf/2105.01848.pdf)
+
+[github库](https://github.com/JiaquanYe/TableMASTER-mmocr)
+
+## 数据集
+
+### PubLayNet（已下载）
+
+![publaynet_data](./pics/publaynet_data.png)
+
+[json format of the Object Detection task of MS COCO](https://cocodataset.org/#format-data)
+
+```
+images[{
+    "file_name": String,
+    "width": int,
+    "id": int,
+    "height": int,
+}]
+
+annotation{
+    "id": int, 
+    "image_id": int, 
+    "category_id": int, 
+    "segmentation": RLE or [polygon],
+    "area": float, 
+    "bbox": [x,y,width,height],   # 矩形标注，适合table detection任务
+    "iscrowd": 0 or 1,
+}
+
+categories[{
+    "id": int, 
+    "name": str, 
+    "supercategory": str,
+}]
+```
+
+### TableBank（未下载）
+
+官方公布的地址失效了，有根据github上提供的表单进行申请中
