--- a/lab_reporter/20210914.md
+++ b/lab_reporter/20210914.md
@@ -6,6 +6,7 @@
     - [1. PP-Structure（有代码）](#1-pp-structure有代码)
     - [2. EDD（无代码）](#2-edd无代码)
     - [3. 平安银行某团队icdar2021 table recognition to html任务上的解决方案](#3-平安银行某团队icdar2021-table-recognition-to-html任务上的解决方案)
+    - [4. Multi-Type-TD-TSR](#4-multi-type-td-tsr)
   - [数据集](#数据集)
     - [PubLayNet（已下载）](#publaynet已下载)
     - [TableBank（未下载）](#tablebank未下载)
@@ -43,9 +44,37 @@
 
 ### 2. EDD（无代码）
 
-EDD模型结构
+EDD模型结构（ENCODER-DUAL-DECODER (EDD) MODEL）
 
 ![EDD_pipeline](./pics/EDD_architecture.png)
+
+
+Encoder是CNN网络
+
+`A`指的是注意力网络，`R`为RNN单元
+
+使用两个decoder的原因：
+
+1. 表格结构识别与单元格的内容识别是两个完全不同的任务，单个基于注意力的解码器同时解决两个任务是无效的
+2. 结构识别任务的信息能够对单元格内容识别的任务有帮助
+
+因此这里需要将HTML Ground Truth 分离为两个
+
+![EDD-html-split](./pics/EDD-html-split.png)
+
+注意力可视化
+
+![EDD-Attention-Demo](./pics/EDD-Attention-Demo.png)
+
+整体的loss将表示为
+
+$l_s$, $l_c$分为为结构与内容识别的loss，cross-entropy
+
+$l = \lambda l_s + ( 1 - \lambda )l_c$
+
+**TEDS**：TREE-EDIT-DISTANCE-BASED SIMILARITY
+
+
 
 使用PaperWithCode查找代码，有提供一个github库，但是好像不是这篇论文的代码，是另外一篇论文的代码，
 
@@ -56,6 +85,31 @@ EDD模型结构
 [pdf链接](https://arxiv.org/pdf/2105.01848.pdf)
 
 [github库](https://github.com/JiaquanYe/TableMASTER-mmocr)
+
+### 4. Multi-Type-TD-TSR
+
+ Multi-stage Pipeline for Table Detection and Table Structure Recognition
+
+[pdf链接](https://arxiv.org/pdf/2105.11021.pdf)
+
+[github库](https://github.com/Psarpei/Multi-Type-TD-TSR)
+
+![Multi-Type-TD-TSR-pipeline](./pics/Multi-Type-TD-TSR-pipeline.png)
+
+使用[Detectron2](https://github.com/facebookresearch/detectron2)进行表格检测。后面的步骤基本是使用传统的图像处理方法来处理。
+
+1. 有完整边框
+
+    ![border-pic](./pics/bordered_example.png)
+
+2. 有部分边框
+
+    ![part-border-pic](./pics/example.jpg)
+
+3. 无边框
+
+    ![no-border-pic](./pics/unbordered_example.jpg)
+
 
 ## 数据集
 
