--- a/lab_reporter/20210914.md
+++ b/lab_reporter/20210914.md
@@ -7,13 +7,28 @@
     - [2. EDD（无代码）](#2-edd无代码)
     - [3. 平安银行某团队icdar2021 table recognition to html任务上的解决方案](#3-平安银行某团队icdar2021-table-recognition-to-html任务上的解决方案)
     - [4. Multi-Type-TD-TSR](#4-multi-type-td-tsr)
+    - [5. CascadeTabNet](#5-cascadetabnet)
   - [数据集](#数据集)
     - [PubLayNet（已下载）](#publaynet已下载)
     - [TableBank（未下载）](#tablebank未下载)
+    - [icdar2013 table](#icdar2013-table)
 
 <!-- /TOC -->
 
 # 暑期总结
+
+1. 跑了一些String Similarity的实验（似乎没什么用）
+2. 学了学图，看了看gcn,gat,graphsage等代码（Emmm，还没怎么跑代码）
+3. 重写了之前图档整饰的前后端
+4. 尝试完善原有的图像整饰(文本方向检测，文档中目标检测的优化)
+   1. 文本方向检测
+        
+        [使用paddleocr进行文本方向的检测](../project_related/use_paddle_text_direction.md)
+   2. 文档对象检测的优化
+
+        目标检测的方法肯定会存在一定的误差，就是说形状只能是矩形，就也可能丢失信息或者处理不准确
+
+        想尝试使用实体分割，但是数据集难搞，尝试了百度开源的[EISeg](https://github.com/PaddlePaddle/PaddleSeg/blob/release/2.2/contrib/EISeg/README.md)，实在太卡了，就没弄了
 
 # 表格识别
 
@@ -75,7 +90,6 @@ $l = \lambda l_s + ( 1 - \lambda )l_c$
 **TEDS**：TREE-EDIT-DISTANCE-BASED SIMILARITY
 
 
-
 使用PaperWithCode查找代码，有提供一个github库，但是好像不是这篇论文的代码，是另外一篇论文的代码，
 
 ### 3. 平安银行某团队icdar2021 table recognition to html任务上的解决方案
@@ -109,6 +123,14 @@ $l = \lambda l_s + ( 1 - \lambda )l_c$
 3. 无边框
 
     ![no-border-pic](./pics/unbordered_example.jpg)
+
+### 5. CascadeTabNet
+
+[pdf链接](https://arxiv.org/pdf/2004.12629.pdf)
+
+[github库](https://github.com/DevashishPrasad/CascadeTabNet)
+
+
 
 
 ## 数据集
@@ -147,3 +169,5 @@ categories[{
 ### TableBank（未下载）
 
 官方公布的地址失效了，有根据github上提供的表单进行申请中
+
+### icdar2013 table 
