--- a/lab_reporter/20210914.md
+++ b/lab_reporter/20210914.md
@@ -12,6 +12,9 @@
     - [PubLayNet（已下载）](#publaynet已下载)
     - [TableBank（未下载）](#tablebank未下载)
     - [icdar2013 table](#icdar2013-table)
+    - [icdar2019](#icdar2019)
+    - [hayWhale](#haywhale)
+  - [总结](#总结)
 
 <!-- /TOC -->
 
@@ -31,6 +34,8 @@
         想尝试使用实体分割，但是数据集难搞，尝试了百度开源的[EISeg](https://github.com/PaddlePaddle/PaddleSeg/blob/release/2.2/contrib/EISeg/README.md)，实在太卡了，就没弄了
 
 # 表格识别
+
+表格检测、表格结构识别、表格内容识别
 
 ## 论文
 
@@ -135,6 +140,8 @@ $l = \lambda l_s + ( 1 - \lambda )l_c$
 
 ## 数据集
 
+![表格识别数据集](../paper_md/table_idea/pics/表格识别数据集.png)
+
 ### PubLayNet（已下载）
 
 ![publaynet_data](./pics/publaynet_data.png)
@@ -171,3 +178,24 @@ categories[{
 官方公布的地址失效了，有根据github上提供的表单进行申请中
 
 ### icdar2013 table 
+
+### icdar2019
+
+### hayWhale
+
+## 总结
+
+重点关注表格结构识别任务
+
+* 传统图像处理方式（基本就是基于规则）
+  * 使用opencv腐蚀膨胀等操作
+  * 使用直线拟合等操作
+* 深度学习
+  * 目标检测、语义分割
+  * 图神经网络（Rethinking Table Recognitionusing Graph Neural Networks）
+  * GAN
+
+1. 使用第三方库进行表格检测以及ocr识别，对结果进行后处理（绝大多数）
+2. 提出端到端新模型，实现表格检测与结构识别
+
+代码（跑了4，5个吧）目前实在没有找到一个能跑起来的，基本上都是能跑predict。
